# yrm

./: .gitignore  1Inch.sol  DexArb.sol  IOneSplitMulti.sol  README.md  dexarbs9.py  generation.txt  package-lock.json  package.json  pyproject.toml
fastapi-pgres/: .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.override.yml
fastapi-pgres/backend/app/app/email-templates/src/: reset_password.mjml
fastapi-pgres/frontend/: tsconfig.json  vue.config.js
fastapi-pgres/frontend/public/: index.html
fastapi-pgres/frontend/src/: App.vue  api.ts  main.ts  registerServiceWorker.ts  router.ts
fastapi-pgres/frontend/src/components/: NotificationsManager.vue  UploadButton.vue
fastapi-pgres/frontend/src/store/admin/: actions.ts  getters.ts
fastapi-pgres/frontend/src/store/main/: actions.ts  getters.ts  mutations.ts
fastapi-pgres/frontend/src/views/: Login.vue  PasswordRecovery.vue  ResetPassword.vue
fastapi-pgres/frontend/src/views/main/: Dashboard.vue  Main.vue
fastapi-pgres/frontend/src/views/main/admin/: AdminUsers.vue  CreateUser.vue  EditUser.vue
fastapi-pgres/frontend/src/views/main/profile/: UserProfile.vue  UserProfileEdit.vue  UserProfileEditPassword.vue
scripts/: generate-fastapi.sh  init.sh
