[tool.poetry]
name = "rainmaker"
version = "0.1.0"
description = "rainmaker strategy"
authors = ["sam <sam@freighttrust.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
brownie = "^1.11.12"
cufflinks = "^0.17.3"
web3 = "^4.8.2"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8 = "^3.8.4"
flake9-isort = "^4.0.2"
isort = "^5.6.4"
virtualenv = "^20.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
